# Leporem-art-BE

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  manage.py  package-lock.json  package.json  pyproject.toml  serverless.dev.yml  serverless.production.yml  serverless.yml  swagger.yaml
.github/workflows/: cd-develop.yml  cd.yml  ci.yml  deploy_swagger.yml
apps/buyers/: models.py  respositories.py  serializers.py  urls.py  views.py
apps/buyers/migrations/: 0001_initial.py  0002_alter_buyer_options_buyer_created_buyer_modified.py
apps/chats/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/chats/migrations/: 0001_initial.py  0002_rename_sender_message_user.py  0003_alter_chatroom_options_and_more.py  0004_chatroom_uuid_message_uuid.py  0005_message_type.py  0006_alter_message_image.py
apps/deliveries/: apps.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/deliveries/migrations/: 0001_initial.py
apps/delivery/: repositories.py  services.py  urls.py  views.py
apps/delivery/migrations/: 0001_initial.py
apps/exhibitions/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/exhibitions/migrations/: 0001_initial.py  0002_exhibition_artist_name.py  0003_exhibition_is_template.py  0004_alter_exhibition_seller.py  0005_exhibitionitem_item.py  0006_alter_exhibitionitem_item.py  0006_exhibition_status.py  0007_alter_exhibitionitem_template.py  0008_alter_exhibitionitem_background_color_and_more.py  0009_merge_20231025_1327.py  0010_alter_exhibitionitem_options_and_more.py
apps/items/: exceptions.py  filters.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/items/migrations/: 0001_initial.py  0002_like.py  0003_alter_item_depth_alter_item_height_alter_item_width.py  0004_category_categorymapping_color_colormapping_and_more.py  0005_like_buyer_alter_category_category_alter_color_color.py  0006_recentlyvieweditem.py  0007_alter_recentlyvieweditem_deleted_date.py  0008_remove_recentlyvieweditem_deleted_date.py  0009_recentlyvieweditem_deleted_date.py  0010_item_deleted_date.py  0011_item_end_date_item_start_date.py
apps/notifications/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_alter_device_user.py
apps/orders/: exceptions.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_order_ordered_datetime.py  0003_review.py  0004_alter_order_item.py  0005_order_address_order_name_order_phone_number_and_more.py  (+3 more)
apps/sellers/: filters.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/users/: authentications.py  exceptions.py  models.py  open_api_params.py  permissions.py  repositories.py  serializers.py  services.py  urls.py  views.py
deploy/: entrypoint.sh  gunicorn.conf.py  nginx.conf
leporem_art/: settings.py  urls.py  wsgi.py
leporem_art/settings/: __init__.py  base.py  develop.py  development.py  local.py  production.py  test.py
src/leporem_art/: asgi.py  settings.py  urls.py
tests/: test.py  utils.py
tests/buyers/: factories.py
tests/chats/: factories.py  test_repositories.py  test_views.py
tests/exhibitions/: test_repositories.py
tests/sellers/: factories.py
tests/users/: factories.py
users/: open_api_params.py  urls.py  views.py
utils/: files.py
utils/auth/: apple.py  kakao.py  leporemart.py
utils/email/: aws.py
(+17 files in other folders)
